# VexCore

./: .gitignore  AGENTS.md  README.md  config.yaml  main.py  pyproject.toml
docs/: osv.md  php.md  python.md
rules/sast/: django.json  js.json  php.json
rules/sca/: pypi.json
rules/secrets/: generic.json
src/: crawler.py  domain.py  engine.py  main.py  ports.py
src/analyzers/: __init__.py  _base.py  osv.py  sast.py  sca.py  secrets.py
src/reporters/: __init__.py  console.py
src/tui/: __init__.py  app.py  styles.tcss
src/utils/: config_loader.py
