[project]
name = "vexcore"
version = "0.1.0"
description = "Escáner estático de seguridad modular."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.3",
]

[project.scripts]
vexcore = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"